--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,39 @@
 <!DOCTYPE html>
 <html>
+ <script>
+ function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition, showError);
+  } else {
+    console.log("Geolocation is not supported by this browser.");
+    setDefaultLocation(); 
+  }
+}
+
+function showPosition(position) {
+  window.locationData = position.coords.latitude + "," + position.coords.longitude;
+}
+
+function showError(error) {
+  switch(error.code) {
+    case error.PERMISSION_DENIED:
+      console.log("User denied the request for Geolocation.");
+      break;
+    case error.POSITION_UNAVAILABLE:
+      console.log("Location information is unavailable.");
+      break;
+    case error.TIMEOUT:
+      console.log("The request to get user location timed out.");
+      break;
+    case error.UNKNOWN_ERROR:
+      console.log("An unknown error occurred.");
+      break;
+  }
+  window.locationData = "52.229676,21.012229";
+}
+</script>
 <head>
+ 
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -55,5 +88,7 @@
       });
     });
   </script>
+  
+  
 </body>
 </html>
